# cow

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
config/: train.yaml
notebook/: eda.ipynb
src/: collect_bad_photos.py  config.py  data.py  eval.py  losses.py  metrics.py  models.py  predict.py  trainer.py  utils.py
