[project]
name = "cow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "omegaconf>=2.3.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "pillow>=12.3.0",
    "pyyaml>=6.0.3",
    "seaborn>=0.13.2",
    "timm>=1.0.28",
    "torch>=2.13.0",
    "tqdm>=4.69.0",
    "wandb>=0.28.1",
]
